[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenvy = "0.15"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4.42", features = ["serde"] }
bytes = "1.10.1"
rand = "0.9.2"
config = { version = "0.15.18", features = ["toml"] }
bincode = "1"
